Spacing fix

--- a/source/stylesheets/modules/_voting-booths.scss
+++ b/source/stylesheets/modules/_voting-booths.scss
@@ -91,7 +91,7 @@
 .voting-booth-result-inner {
   position: relative;
   top: 50%;
-  margin-top: -10rem;
+  margin-top: -9rem;
   i {
     font-size: $font-size-xxxxl * 1.5;
   }
